# wmc

./: .gitignore  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  README.md  idea.md  rust-toolchain.toml
crates/wmc-component/: Cargo.toml
crates/wmc-component/src/: error.rs  lib.rs
crates/wmc-core/: Cargo.toml
crates/wmc-core/src/: error.rs  lib.rs  marker.rs  marker_buffer.rs  projection.rs  theme.rs  topology.rs
crates/wmc-render/: Cargo.toml
crates/wmc-render/src/: buffer.rs  context.rs  error.rs  lib.rs  program.rs  shaders.rs  world_renderer.rs
examples/basic/: README.md  index.html
