[package]
name = "wmc-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
masterror.workspace = true
serde.workspace = true
serde_json.workspace = true
geojson = { version = "0.24", features = ["geo-types"] }
geo-types = "0.7"

[lints]
workspace = true
